Правки после первого ревью